--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,6 +5,7 @@
     <!-- <link rel="stylesheet" href="../public/FG_css/entry.scss"> -->
     <link rel="icon" href="%PUBLIC_URL%/favicon1.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="screen-shot.png" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
