--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,6 +10,10 @@
       name="description"
       content="Web site created using create-react-app"
     />
+      <meta property="og:title" content="FoodieGram" />
+      <meta property="og:image" content="main.png" />
+      <meta property="og:description" content="MERN stack social media website for foodies" />
+      <meta property="og:url" content="https://foodiegram-aa.herokuapp.com/#/" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
   
